--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-color: lightgray;
     left: 0px;
     width: 100%;
-    height: auto;
+    height: 4.3rem;
     position: fixed;
     top: 0px;
     display: flex;
@@ -15,18 +15,24 @@ body {
 }
 
 #nav-header {
-    background-color: blue;
+    background-color:black;
+    color: white;
     width: 35%;
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
 #div-list {
     width: 65%;
-    background-color: lawngreen;
+    background-color: black;
     display: flex;
 }
 
+#logo {
+    width: 4rem;
+    height: auto;
+}
 ul.nav-list {
     display: flex;
     flex-direction: row;
@@ -38,9 +44,8 @@ ul.nav-list {
 }
 
 a { 
-    color: red;
-    border-radius: 15%;
-    padding: 40% 25% 40% 25%;
+    font-family: 'Roboto', sans-serif;
+    color:white;
     text-decoration: none; 
 }
 a:visited { 
@@ -48,8 +53,7 @@ a:visited {
 }
 a:hover { 
     transition: .5s;
-    text-decoration: none;
-    background-color: black;
+    color: rgba(255,255,255,0.3);
 }
 a:focus { 
     text-decoration: none; 
@@ -59,6 +63,8 @@ a:hover, a:active {
 }
 
 #welcome-section {
+    margin: 4.3rem -8px 0px -8px;
+    background-color: red;
     height: 100vh;
 }
 
