--- a/style.css
+++ b/style.css
@@ -27,22 +27,19 @@ body {
     justify-content: center;
 }
 
-#div-list {
-    width: 65%;
-    background-color: black;
-    display: flex;
-}
-
 #logo {
     width: 4rem;
     height: auto;
 }
 ul.nav-list {
+    background-color: black;
+    
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
     width: 100%;
+    margin: 0;
     padding: 0;
     list-style: none;
 }
@@ -69,7 +66,6 @@ a:hover, a:active {
 
 #welcome-section {
     background: linear-gradient(215deg, grey, lightgrey);
-    /* margin-top:4.3rem; */
     height: 100vh;
     text-align: center;
 }
@@ -90,14 +86,12 @@ a:hover, a:active {
     margin-left: 10vw;
     margin-right: 5vw;
     justify-content: center;
-    /* background-color: tomato; */
     text-align: center;
 }
 
 #photo-div {
     width: 50%;
     justify-content: center;
-    /* background-color: teal; */
 }
 
 .photo {
@@ -107,7 +101,6 @@ a:hover, a:active {
 
 #projects {
     text-align: center;
-    /* background-color: red; */
 }
 
 #projects h1{
@@ -123,7 +116,6 @@ a:hover, a:active {
     height: 30vh;
     align-items: center;
     justify-content: space-evenly;
-    /* background-color: green */
 }
 
 
@@ -167,32 +159,39 @@ footer {
         height: auto;
     }
     #nav-header h1{
+        font-size: 5vw;
+    }
+    ul.nav-list{
+        width: 60vw;
+    }
+    ul.nav-list h2{
         font-size: 4vw;
     }
-    #div-list h2 {
-        font-size: 3vw;
-    }
-
     .flexrow {
         display: flex;
         flex-direction: column;
         height: 150vh;
         align-items: center;
         justify-content: space-evenly;
-        /* background-color: green */
     }
     .project-tile {
-        /* background-color: violet; */
         width: 72vw;
         height: 40vh;
     }
     #about {
+        margin-top: 0px;
         display: flex;
         flex-direction: column;
-        /* margin-top: 4vh; */
+        align-items: center;
+    }
+    #about h1{
+        margin-top: 0px;
+        background-color: darkslategrey;
+        color: white;
+        border: solid darkslategrey 1vh;
     }
     #text-div {
-        width: 50%;
+        width: 100vw;
         height: auto;
         margin-left: 5vw;
         margin-right: 5vw;
@@ -200,5 +199,8 @@ footer {
         /* background-color: tomato; */
         text-align: center;
     }
-    
+    #photo-div{
+        display: flex;
+        margin: 0px -27px 3vh 0px;
+    }
 }
